--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio Website</title>   
+    <title>My Portfolio</title>   
     <link rel="stylesheet" href="style.css" />   
   </head>
   <body>  
@@ -48,7 +48,7 @@
           <div class="right">
             <div class="topic">Web Designing Is My Passion</div>
             <p>
-              Hello, and welcome to my portfolio! I'm Sahaya Joseph Idin, a passionate MERN stack developer and a college student with a strong drive to create innovative web applications. Throughout my academic journey, I have developed a keen interest in web development, and the MERN stack has become my area of expertise.
+              Hello, and welcome to my portfolio! I'm Sivakumar S, a passionate MERN stack developer and a college student with a strong drive to create innovative web applications. Throughout my academic journey, I have developed a keen interest in web development, and the MERN stack has become my area of expertise.
               <br/>As a college student pursuing a degree in B.E in Computer and Science Engineering, I have had the opportunity to dive deep into the world of web development and gain hands-on experience with the MERN stack. I have dedicated countless hours to learning and honing my skills in MongoDB, Express.js, React.js, and Node.js, which have become the foundation of my development journey.<br/>
 
 With a solid understanding of HTML, CSS, and JavaScript, I have been able to design and implement intuitive user interfaces that prioritize both aesthetics and usability. By leveraging the power of React.js, I have developed dynamic and responsive front-end components that enhance the user experience and provide seamless interaction.
